--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@sushi-go-party/sushi-go-game": ["libs/sushi-go-game/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
