--- a/package.json
+++ b/package.json
@@ -14,11 +14,21 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
     "@koa/cors": "^4.0.0",
     "@koa/router": "^12.0.0",
+    "@mantine/carousel": "^5.9.5",
+    "@mantine/core": "^5.9.5",
+    "@mantine/form": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
+    "@mantine/modals": "^5.9.5",
+    "@mantine/next": "^5.9.5",
+    "@mantine/notifications": "^5.9.5",
     "@nrwl/next": "15.2.1",
     "boardgame.io": "^0.50.2",
     "core-js": "^3.6.5",
+    "embla-carousel-react": "^7.0.5",
     "koa": "^2.13.4",
     "next": "13.0.0",
     "react": "18.2.0",
